feat: endpoints de user, rotas, dtos validations e mapeamento

--- a/src/MeetingRooms.DI/MeetingRooms.DI.csproj
+++ b/src/MeetingRooms.DI/MeetingRooms.DI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MeetingRooms.Application\MeetingRooms.Application.csproj" />
     <ProjectReference Include="..\MeetingRooms.Infrastructure\MeetingRooms.Infrastructure.csproj" />
   </ItemGroup>
 
