feat: rota de login e autenticação de usuário no swagger

--- a/src/MeetingRooms.API/appsettings.json
+++ b/src/MeetingRooms.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ep-delicate-mode-a5l872b3-pooler.us-east-2.aws.neon.tech;Database=meetingroom;User Id=meetingroom_owner;Password=npg_VqguNnQ1de8K;TrustServerCertificate=True"
+    "DefaultConnection": "Host=ep-delicate-mode-a5l872b3-pooler.us-east-2.aws.neon.tech; Port=5432; Database=meetingroom;Username=meetingroom_owner; Password=npg_VqguNnQ1de8K; SSL Mode=Require;"
+  },
+  "AuthSettings": {
+    "SecretKey": "aL@9sd&*92KdJf!LmNqPzXyVw#T$5BgHh%6C^RtY",
+    "Issuer": "MeetingRoomsAPI",
+    "Audience": "Users",
+    "PublicRoutes": ""
   }
 }
