--- a/src/MeetingRooms.Infrastructure/MeetingRooms.Infrastructure.csproj
+++ b/src/MeetingRooms.Infrastructure/MeetingRooms.Infrastructure.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
   </ItemGroup>
 
   <ItemGroup>
