refactor: remoção de settings não utilizada

--- a/src/MeetingRooms.API/appsettings.json
+++ b/src/MeetingRooms.API/appsettings.json
@@ -12,7 +12,6 @@
   "AuthSettings": {
     "SecretKey": "aL@9sd&*92KdJf!LmNqPzXyVw#T$5BgHh%6C^RtY",
     "Issuer": "MeetingRoomsAPI",
-    "Audience": "Users",
-    "PublicRoutes": ""
+    "Audience": "Users"
   }
 }
